--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,5 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.3.0",
+    "unstructured-client>=0.31.1"
 ]
