--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,6 @@
 UNSTRUCTURED_API_KEY="<key-here>"
 ANTHROPIC_API_KEY="<key-here>"
+AWS_KEY="<key-here>"
+AWS_SECRET="<key-here>"
+UNSTRUCTURED_API_KEY="<key-here>"
+WEAVIATE_CLOUD_API_KEY="<key-here>"
