--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,12 +30,13 @@ repos:
             "--fix",
             "--select=I,UP015,UP032,UP034,UP018,COM,C4,PT,SIM,PLR0402",
             # remove SIM115 after a separate PR to fix the issue
-            "--ignore=PT011,PT012,SIM117,SIM115,PT006",
+            "--ignore=PT011,PT012,SIM117,PT006",
           ]
-      - id: ruff-format
+      # - id: ruff-format
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.1
     hooks:
       - id: flake8
         language_version: python3
+        args: ["--max-line-length=100"]
