add a comment to env.template

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ AWS_KEY="<key-here>"
 AWS_SECRET="<key-here>"
 UNSTRUCTURED_API_KEY="<key-here>"
 WEAVIATE_CLOUD_API_KEY="<key-here>"
+# store your service account key in json file some safe location and read from the file
+export GOOGLEDRIVE_SERVICE_ACCOUNT_KEY=$(cat /path/to/google_service_account_key.json | base64)
+GOOGLE_DRIVE_ID="<key-here>"
