--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "boto3>=1.37.14",
     "firecrawl-py>=1.14.1",
     "mcp[cli]>=1.3.0",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.25.3",
     "python-dotenv>=1.0.1",
     "unstructured-client>=0.31.1",
 ]
