add neo4j creds in env.template

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,18 @@ AWS_KEY="<key-here>"
 AWS_SECRET="<key-here>"
 UNSTRUCTURED_API_KEY="<key-here>"
 WEAVIATE_CLOUD_API_KEY="<key-here>"
-# store your service account key in json file some safe location and read from the file
-export GOOGLEDRIVE_SERVICE_ACCOUNT_KEY=$(cat /path/to/google_service_account_key.json | base64)
-GOOGLE_DRIVE_ID="<key-here>"
+# below are azure storage account combinations as creds
+# you just need one of them
+# combo#1
+AZURE_CONNECTION_STRING="<string-here>"
+# combo#2
+AZURE_ACCOUNT_NAME="<name-here>"
+AZURE_ACCOUNT_KEY="<key-here>"
+# combo#3
+AZURE_ACCOUNT_NAME="<name-here>"
+AZURE_SAS_TOKEN="<token-here>"
+
+NEO4J_URI="neo4j+s://<INSTANCE_ID>.databases.neo4j.io"
+NEO4J_USERNAME="<USERNAME>"
+NEO4J_DATABASE="<DATABASE>"
+NEO4J_PASSWORD="<PASSWORD>"
