--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ AWS_SECRET="<key-here>"
 UNSTRUCTURED_API_KEY="<key-here>"
 WEAVIATE_CLOUD_API_KEY="<key-here>"
 # below are azure storage account combinations as creds
-# you just need one of them
+# you just need one combo of them
 # combo#1
 AZURE_CONNECTION_STRING="<string-here>"
 # combo#2
