--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "anthropic>=0.49.0",
     "mcp[cli]>=1.3.0",
+    "notebook>=7.3.3",
     "python-dotenv>=1.0.1",
     "unstructured-client>=0.31.1",
 ]
