Add AstraDB destination connector integration

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,10 @@ AWS_KEY="<key-here>"
 AWS_SECRET="<key-here>"
 UNSTRUCTURED_API_KEY="<key-here>"
 WEAVIATE_CLOUD_API_KEY="<key-here>"
+# AstraDB
+ASTRA_DB_APPLICATION_TOKEN="<astra-token-here>"
+ASTRA_DB_API_ENDPOINT="<astra-endpoint-here>"
+
 # store your service account key in json file some safe location and read from the file
 export GOOGLEDRIVE_SERVICE_ACCOUNT_KEY=$(cat /path/to/google_service_account_key.json | base64)
 GOOGLE_DRIVE_ID="<key-here>"
