--- a/.env.template
+++ b/.env.template
@@ -7,4 +7,5 @@ WEAVIATE_CLOUD_API_KEY="<key-here>"
 # store your service account key in json file some safe location and read from the file
 export GOOGLEDRIVE_SERVICE_ACCOUNT_KEY=$(cat /path/to/google_service_account_key.json | base64)
 GOOGLE_DRIVE_ID="<key-here>"
-LOG_LEVEL="ERROR"
+LOG_LEVEL="INFO"
+CONFIRM_TOOL_USE='true'
