Astra, firecrawl integration (#13)
* added astradb as destination connector, resolved bug w create s3 source hallucinating a default bucket uri

* added firecrawl, updated readme

* moved credentials to .env, updated code and readme around that

* added tests, split functions within firecrawl.py to one function per task

* firecrawl crawl html, generate llmfull.txt added, functions all consolidated and do their own tasks

* Remove AstraDB integration to move to separate branch

* firecrawl and llmtext generation + readme changes

* added to changelog

* added makefile

* added makefile info to the readme

* deleted test/readme, updated jobtype in fc to firecrawl_jobtype

* updated firecrawl code params, readme more descriptive, test in test/ folder, makefile

* deleted unneeded tests folders, moved firecrawl to connectors/external/

* Update Makefile

Co-authored-by: Tracy Shen <34946571+tbs17@users.noreply.github.com>

* Update Makefile

Co-authored-by: Tracy Shen <34946571+tbs17@users.noreply.github.com>

---------

Co-authored-by: ajay23-uns <ajay-int@unstructured.io>
Co-authored-by: Tracy Shen <34946571+tbs17@users.noreply.github.com>

--- a/.env.template
+++ b/.env.template
@@ -3,6 +3,9 @@ ANTHROPIC_API_KEY="<key-here>"
 AWS_KEY="<key-here>"
 AWS_SECRET="<key-here>"
 WEAVIATE_CLOUD_API_KEY="<key-here>"
+
+# Firecrawl
+FIRECRAWL_API_KEY="<firecrawl-key-here>"
 # AstraDB
 ASTRA_DB_APPLICATION_TOKEN="<astra-token-here>"
 ASTRA_DB_API_ENDPOINT="<astra-endpoint-here>"
