--- a/.env.template
+++ b/.env.template
@@ -22,3 +22,5 @@ AZURE_ACCOUNT_NAME="<name-here>"
 AZURE_SAS_TOKEN="<token-here>"
 
 NEO4J_PASSWORD="<PASSWORD>"
+LOG_LEVEL="INFO"
+CONFIRM_TOOL_USE='true'
