--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ dependencies = [
     "mcp[cli]>=1.3.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
+    "notebook>=7.3.3",
     "python-dotenv>=1.0.1",
-    "unstructured-client>=0.31.1",
+    "unstructured-client>=0.31.3",
+    "pip"
+
 ]
 
 [build-system]
@@ -20,3 +23,8 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["connectors", "minimal_client"]  # Explicitly list your packages
+
+[project.optional-dependencies]
+dev=[
+    "pre-commit"
+]
