add pinecone env.template creds

--- a/.env.template
+++ b/.env.template
@@ -24,3 +24,5 @@ AZURE_SAS_TOKEN="<token-here>"
 NEO4J_PASSWORD="<PASSWORD>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
+
+PINECONE_API_KEY="<key-here>"
