initial mongo db dest

--- a/.env.template
+++ b/.env.template
@@ -22,5 +22,6 @@ AZURE_ACCOUNT_NAME="<name-here>"
 AZURE_SAS_TOKEN="<token-here>"
 
 NEO4J_PASSWORD="<PASSWORD>"
+MONGO_DB_CONNECTION_STRING="<CONNECTION_STRING>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
