add into env.template and update changelog

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,11 @@ NEO4J_PASSWORD="<PASSWORD>"
 MONGO_DB_CONNECTION_STRING="<CONNECTION_STRING>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
+
+# store your service account key in json file some safe location and read from the file
+export GOOGLEDRIVE_SERVICE_ACCOUNT_KEY=$(cat /path/to/google_service_account_key.json | base64)
+GOOGLE_DRIVE_ID="<key-here>"
+
+# below is the databricks creds
+DATABRICKS_CLIENT_ID="<client-id>"
+DATABRICKS_CLIENT_SECRET="<client-secret>"
