--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,8 @@ NEO4J_PASSWORD="<PASSWORD>"
 MONGO_DB_CONNECTION_STRING="<CONNECTION_STRING>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
+
+# one drive credential
+ONEDRIVE_CLIENT_ID="<client-id-here>"
+ONEDRIVE_CLIENT_CRED="<client-cred-here>"
+ONEDRIVE_TENANT_ID="<tenant-id-here>"
