improve docstring and add env template

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,6 @@ NEO4J_PASSWORD="<PASSWORD>"
 MONGO_DB_CONNECTION_STRING="<CONNECTION_STRING>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
+
+SALESFORCE_PASSWORD="<PASSWORD>"
+SALESFORCE_SECURITY_TOKEN="<TOKEN>"
