add delta table

--- a/.env.template
+++ b/.env.template
@@ -32,7 +32,7 @@ CONFIRM_TOOL_USE='true'
 GOOGLEDRIVE_SERVICE_ACCOUNT_KEY="<converted string>"
 
 
-# below is the databricks creds
+# below is the databricks creds for both volumes and delta table connectors
 DATABRICKS_CLIENT_ID="<client-id>"
 DATABRICKS_CLIENT_SECRET="<client-secret>"
 
