--- a/.env.template
+++ b/.env.template
@@ -21,7 +21,10 @@ AZURE_ACCOUNT_KEY="<key-here>"
 AZURE_ACCOUNT_NAME="<name-here>"
 AZURE_SAS_TOKEN="<token-here>"
 
+# Neo4j
+NEO4J_USERNAME="<USER_NAME>"
 NEO4J_PASSWORD="<PASSWORD>"
+
 MONGO_DB_CONNECTION_STRING="<CONNECTION_STRING>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
@@ -30,7 +33,6 @@ CONFIRM_TOOL_USE='true'
 # convert the json file into a string via command: cat /path/to/google_service_account_key.json | base64
 # then use the string as the value for GOOGLEDRIVE_SERVICE_ACCOUNT_KEY
 GOOGLEDRIVE_SERVICE_ACCOUNT_KEY="<converted string>"
-
 
 # below is the databricks creds
 DATABRICKS_CLIENT_ID="<client-id>"
