--- a/.env.template
+++ b/.env.template
@@ -29,6 +29,7 @@ CONFIRM_TOOL_USE='true'
 # store your service account key in a json file in some safe location
 # convert the json file into a string via command: cat /path/to/google_service_account_key.json | base64
 # then use the string as the value for GOOGLEDRIVE_SERVICE_ACCOUNT_KEY
+# remember that Google Drive API has to be enabled for the project in google cloud console
 GOOGLEDRIVE_SERVICE_ACCOUNT_KEY="<converted string>"
 
 
