--- a/.env.template
+++ b/.env.template
@@ -40,3 +40,8 @@ DATABRICKS_CLIENT_SECRET="<client-secret>"
 ONEDRIVE_CLIENT_ID="<client-id-here>"
 ONEDRIVE_CLIENT_CRED="<client-cred-here>"
 ONEDRIVE_TENANT_ID="<tenant-id-here>"
+
+# sharepoint credential
+SHAREPOINT_CLIENT_ID="<client-id-here>"
+SHAREPOINT_CLIENT_CRED="<client-cred-here>"
+SHAREPOINT_TENANT_ID="<tenant-id-here>"
