--- a/.env.template
+++ b/.env.template
@@ -41,5 +41,5 @@ ONEDRIVE_CLIENT_ID="<client-id-here>"
 ONEDRIVE_CLIENT_CRED="<client-cred-here>"
 ONEDRIVE_TENANT_ID="<tenant-id-here>"
 
-SALESFORCE_PASSWORD="<PASSWORD>"
-SALESFORCE_SECURITY_TOKEN="<TOKEN>"
+SALESFORCE_CONSUMER_KEY="<PASSWORD>"
+SALESFORCE_PRIVATE_KEY="<TOKEN(paste your entire .pem file here)>"
