--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install pre-commit
-        run: uv pip install pre-commit
+        run: pip install pre-commit
 
       - name: Run pre-commit
         run: pre-commit run --all-files
