--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "uns-mcp"
 version = "0.1.1"
 description = "MCP server implementation providing structured tools for interacting with the Unstructured API, managing sources, destinations, workflows, and jobs"
 requires-python = ">=3.12"
+readme = "README.md"
 dependencies = [
     "anthropic>=0.49.0",
     "boto3>=1.37.14",
@@ -10,12 +11,7 @@ dependencies = [
     "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
     "unstructured-client>=0.32.0",
-    "pip"
-]
-readme = "README.md"
-
-[project.optional-dependencies]
-dev=[
+    "pip",
     "pre-commit",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
