--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,17 @@ dependencies = [
     "boto3>=1.37.14",
     "firecrawl-py>=1.14.1",
     "mcp[cli]>=1.3.0",
-    "python-dotenv>=1.0.1",
-    "unstructured-client>=0.32.0",
-    "pip",
-    "pre-commit",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
-    "notebook>=7.3.3"
+    "notebook>=7.3.3",
+    "python-dotenv>=1.0.1",
+    "unstructured-client>=0.32.0",
+    "pip"
+]
+
+[project.optional-dependencies]
+dev=[
+    "pre-commit"
 ]
 
 [project.scripts]
