feat: add sharepoint source (#45)
* update .gitignore

* add sharepoint as a source connector

* add sharepoint credentials to .env.template

* add tenant as env

* register sharepoint tools

* update changelog & readme

* update readme

* update changelog

--- a/.env.template
+++ b/.env.template
@@ -45,3 +45,8 @@ PINECONE_API_KEY="<key-here>"
 
 SALESFORCE_CONSUMER_KEY="<PASSWORD>"
 SALESFORCE_PRIVATE_KEY="<TOKEN(paste your entire .pem file here)>"
+
+# sharepoint credential
+SHAREPOINT_CLIENT_ID="<client-id-here>"
+SHAREPOINT_CLIENT_CRED="<client-cred-here>"
+SHAREPOINT_TENANT_ID="<tenant-id-here>"
