Azure -> Neo4j example (#38)

--- a/.env.template
+++ b/.env.template
@@ -21,7 +21,10 @@ AZURE_ACCOUNT_KEY="<key-here>"
 AZURE_ACCOUNT_NAME="<name-here>"
 AZURE_SAS_TOKEN="<token-here>"
 
+# Neo4j
+NEO4J_USERNAME="<USER_NAME>"
 NEO4J_PASSWORD="<PASSWORD>"
+
 MONGO_DB_CONNECTION_STRING="<CONNECTION_STRING>"
 LOG_LEVEL="INFO"
 CONFIRM_TOOL_USE='true'
