--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,4 +56,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PUBLISHER_TOKEN }}
         run: |
           uv run python -m build --sdist
-          uv run twine upload -r testpypi dist/*
+          uv run twine upload -r pypi dist/*
