--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,19 +9,19 @@ dependencies = [
     "boto3>=1.37.14",
     "firecrawl-py>=1.14.1",
     "mcp[cli]>=1.3.0",
-    "pytest>=8.3.5",
-    "pytest-asyncio>=0.25.3",
-    "notebook>=7.3.3",
     "python-dotenv>=1.0.1",
     "unstructured-client>=0.32.0",
     "pip",
-    "ipykernel>=6.29.5",
-    "jupyter>=1.1.1",
 ]
 
 [project.optional-dependencies]
 dev=[
-    "pre-commit"
+    "pre-commit",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.25.3",
+    "notebook>=7.3.3",
+    "ipykernel>=6.29.5",
+    "jupyter>=1.1.1",
 ]
 
 [project.scripts]
