--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "uns_mcp"
-version = "0.1.2.3" # Set only non-dev versions to release. Setting extra .2 as 0.1.2 was already released and the name if locked forever. During next release point to 0.1.3
+version = "0.1.3" # Set only non-dev versions to release
 description = "MCP server implementation providing structured tools for interacting with the Unstructured API, managing sources, destinations, workflows, and jobs"
 requires-python = ">=3.12"
 readme = "README.md"
 dependencies = [
     "anthropic>=0.49.0",
-    "boto3>=1.37.14",
+    "boto3>=1.37.27",
     "firecrawl-py>=1.14.1",
     "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
-    "unstructured-client>=0.32.0",
+    "unstructured-client>=0.32.1",
     "pip",
 ]
 
