--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
+    inputs:
+      force_release:
+        description: 'Force release regardless of version changes'
+        required: false
+        default: 'false'
 
 env:
   PYTHONVERSION: "3.12"
@@ -38,6 +43,7 @@ jobs:
         run: |
           source .venv/bin/activate
 
+          FORCE_RELEASE="${{ github.event.inputs.force_release }}"
           CUR_VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])")
 
           git switch --detach HEAD^
@@ -46,8 +52,12 @@ jobs:
 
           echo "Current version in pyproject.toml: $CUR_VERSION"
           echo "Version on main branch: $MAIN_VERSION"
+          echo "FORCE_RELEASE: $FORCE_RELEASE"
 
-          if [ "$CUR_VERSION" == "$MAIN_VERSION" ]; then
+          if [ "$FORCE_RELEASE" == "true" ]; then
+            echo "Force release is enabled. Proceeding with the release."
+            echo "SKIP_RELEASE=false" >> $GITHUB_ENV
+          elif [ "$CUR_VERSION" == "$MAIN_VERSION" ]; then
             echo "The version hasn't changed. Skipping release."
             echo "SKIP_RELEASE=true" >> $GITHUB_ENV
           else
