--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
         if: env.SKIP_RELEASE != 'true'
         env:
           TWINE_USERNAME: "__token__"
-          TWINE_PASSWORD: ${{ secrets.PRIVATE_PYPI_PUBLISHER_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PUBLISHER_TOKEN }}
         run: |
           uv run python -m build --sdist
           uv run twine upload -r pypi dist/* --verbose
